# nanoclaw

./: .dockerignore  .env.example  .env.vps.example  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.vps  README.md  README_zh.md  RUST_PORT.md  bun.lockb  docker-compose.vps.yml  docker-compose.yml  mise.toml  package-lock.json  package.json  pair-main-group.sh  pnpm-lock.yaml  progress.md  test-container-vps.sh  tsconfig.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.ralph/: guardrails.md  progress.md
apps/microclaw-device/: Cargo.toml  build.rs
apps/microclaw-device/.cargo/: config.toml
apps/microclaw-device/src/: boards.rs  display.rs  drivers.rs  event_loop.rs  lib.rs  main.rs  pipeline.rs  renderer.rs  runtime.rs  ui.rs
apps/microclaw-device/tests/: boot.rs  display.rs  esp_stub.rs  event_loop.rs  pipeline.rs  runtime.rs  ui.rs  ws.rs
cockpit/: .env.example  README.md  middleware.ts  package-lock.json  package.json
config/: tenant.yaml
config-examples/: env.example
container/: Dockerfile  build.sh  entrypoint.sh
crates/microclaw-bus/: Cargo.toml
crates/microclaw-bus/src/: lib.rs
crates/microclaw-bus/tests/: idempotent.rs  persistence.rs
docs/: CLI-ADAPTER.md  COCKPIT_SECURITY.md  COCKPIT_SSE.md  ESP_TOOLCHAIN.md  GUI.md  HAL_EVAL_PLAN.md  HOWTO_ADD_TESTS.md  MICROCLAW_HOSTING.md  MULTINODE_SSH.md  NANOCLAW_OS_v1.md  OS_DEFINITION_OF_DONE.md  OS_MEMORY_POLICY.md  REQUIREMENTS.md  RUST_PORT.md  SECURITY.md  SETUP-MANUAL.md  SPEC.md  SPRINT_2_ACCEPTANCE.md  TARGET_DEVICE.md  (+2 more)
(+438 files in other folders)
