[package]
name = "microclaw-device"
version = "0.1.0"
edition = "2021"

[features]
host = []
esp = ["esp-idf-svc"]

[dependencies]
microclaw-protocol = { path = "../../crates/microclaw-protocol" }
serde_json = "1"

esp-idf-svc = { version = "0.51", optional = true }

[build-dependencies]
embuild = "0.33"
